--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Homepage - Techium</title>
-        <meta name="description" content="Techium is a figital agency">
+        <meta name="description" content="Techium is a digital agency">
         <link href="./favicon.ico" rel="icon" type="image/x-icon"/>
-        <link href="./favicon-32x32.png" rel="icon" type="image/png"/>
+        <link href="./favicon.png" rel="icon" type="image/png"/>
     </head>
     <body>
         
