--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -14,9 +14,7 @@
             <div>
                 <div>
                     <a href="\">
-                        <span>
-                            Techium
-                        </span>
+                        <span>Techium</span>
                     </a>
                 </div>
                 <nav>
