--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -13,8 +13,10 @@
         <header>
             <div>
                 <div>
-                    <a href="\">
-                        <span>Techium</span>
+                    <a href="/">
+                        <span>
+                            Techium
+                        </span>
                     </a>
                 </div>
                 <nav>
