--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -15,7 +15,7 @@
                 <div>
                     <a href="/">
                         <span>
-                            <img src="./logo-black.png" alt="Techium logo" type="image/png" width="100" height="100">
+                            <img src="./logo-black.png" alt="Techium logo" type="image/png" width="160" height="40">
                         </span>
                     </a>
                 </div>
@@ -172,8 +172,8 @@
         </main>
         <!-- Footer -->
         <footer>
+            <img src="logo-black.png" alt="Techium logo" type="image/png" width="160" height="40">
             <address>234 Washington Street<br>Urbana, Illinois</address>
-            
             <div>
                 <ul>
                     <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
