--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -169,8 +169,8 @@
                 <header>
                     <h2>Video</h2>
                 </header>
-                <video controls>
-                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/webm">
+                <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
+                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4">
                     <p>Sorry, your browser doesn't support HTML5 video</p>
                 </video>
             </section>
